# strands-samples

02-samples/: README.md
02-samples/19-library-book-renewal-agent/: .gitignore  README.md  pyproject.toml
02-samples/19-library-book-renewal-agent/scripts/: analyze_eval_failures.py  provision_agentcore_policy.py  validate_agentcore_gateway.py
02-samples/19-library-book-renewal-agent/src/: main.py
02-samples/19-library-book-renewal-agent/src/library_agent_demo/: __init__.py  config.py  main.py  models.py  oauth_mcp_client.py
02-samples/19-library-book-renewal-agent/src/library_agent_demo/agents/: __init__.py  base.py  library_book_renewal.sop.md  no_instructions_agent.py  simple_instruction_agent.py  sop_agent.py  steering_agent.py  workflow_agent.py
02-samples/19-library-book-renewal-agent/src/library_agent_demo/evaluation/: __init__.py  runner.py  scenarios.py
02-samples/19-library-book-renewal-agent/src/library_agent_demo/evaluation/evaluators/: __init__.py  book_renewal_tool_call_evaluator.py  confirmation_message_tone_evaluator.py  confirmation_tool_call_evaluator.py  model_utils.py  task_completion_evaluator.py  task_completion_prompt.script.md  tone_adherence_evaluator.py  utils.py
02-samples/19-library-book-renewal-agent/src/library_agent_demo/infrastructure/: __init__.py  app.py  auth_stack.py  gateway_stack.py  provision_policy.py  utils.py
02-samples/19-library-book-renewal-agent/src/library_agent_demo/infrastructure/lambda/: __init__.py  index.py  requirements.txt
02-samples/19-library-book-renewal-agent/src/library_agent_demo/steering/: __init__.py  confirmation_tone_steering_handler.py  confirmation_workflow_steering_handler.py  model_tone_steering_handler.py  renewal_workflow_steering_handler.py
02-samples/19-library-book-renewal-agent/src/library_agent_demo/tools/: __init__.py  book_status_tool.py  checked_out_books_tool.py  send_confirmation_tool.py  user_info_tool.py
02-samples/19-library-book-renewal-agent/tests/: test_steering_handlers.py
(+1 files in other folders)
